# boolmind-ai

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.cloud.yml  docker-compose.yml  engineering-audit-report-dev.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: boolmind-chatbot-spec.mdc
.github/workflows/: advisor-evals.yml
app/: __init__.py
app/advisor/: __init__.py  ab_testing.py  constants.py  latency.py  security.py  types.py
app/api/: advisor.py  chat.py  sessions.py  voice.py  voice_ws.py
app/core/: config.py  dependencies.py  ml_env.py
app/data/: README.md  knowledge.md
app/services/: __init__.py  chat_service.py  groq_client.py  knowledge_base.py  session_manager.py  voice_logging.py  voice_pipeline.py
docs/: advisor-manual-test-plan.md  advisor-test-results-thread-d.md  advisor-test-results.md  monitoring.md
frontend/: admin.html  advisor.html  index.html
knowledge/: legal.md  medical.md  retail.md
knowledge-base/architecture-mappings/: forecasting-architecture-patterns.md  integration-catalog.md  retify-architecture-patterns.md
knowledge-base/business-intelligence/: automation-failure-modes.md  bottleneck-patterns.md  business-model-archetypes.md  business-patterns.md  capability-models.md  consulting-conversation-patterns.md  differentiating-questions.md  hypothesis-ranking-guide.md  industry-mapping-examples.md  intervention-patterns.md  problem-dimensions.md  scaling-dynamics.md  technology-fit-guide.md  universal-workflow-model.md
knowledge-base/capabilities/: applied-ai-services.md  company-capabilities.md  competitive-positioning.md  custom-solutions-engagement.md  local-business-marketing.md  product-fit-routing.md  roi-framework-custom-builds.md  small-business-digital-presence.md  web-mobile-development.md
knowledge-base/general/: company-overview.md  product-comparison-overview.md
monitoring/: prometheus.yml
scripts/: create_pinecone_index.py  execution_audit_report.json  execution_audit_report_after_pipeline.json  execution_audit_report_before_pipeline.json  move_docker_to_d.ps1  run_evals.py  run_execution_audit.py  run_ingest.py  run_manual_tests.py  run_quick_scenarios.py  run_supabase_migration.py  seed_case_evidence.py  setup_gpu.ps1  setup_ollama.ps1  smoke_d1.py  smoke_thread_d_tools.py  verify_gpu.py  verify_pinecone.py  warmup_fidp.py
(+288 files in other folders)
