[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
    "fastapi>=0.129.0",
    "sse-starlette>=3.2.0",
    "pydantic-settings>=2.13.0",
    "groq>=1.0.0",
    "numpy==1.26.4",
    "httpx>=0.27.0",
    "deepgram-sdk>=3.0.0",
    "websockets>=16.0",
    "wsproto>=1.3.2",
    "rich>=13.0.0",
]
