[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
    "fastapi>=0.129.0",
    "sse-starlette>=3.2.0",
    "pydantic-settings>=2.13.0",
    "groq>=1.0.0",
    "numpy==1.26.4",
    "httpx>=0.27.0",
    "deepgram-sdk>=7.2.0,<8",
    "websockets>=16.0",
    "wsproto>=1.3.2",
    "rich>=13.0.0",
    "pinecone>=5.0.0",
    "openai>=1.40.0",
    "upstash-redis>=1.2.0",
    "redis>=5.0.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.0",
    "mcp>=1.27.2,<2",
    "sentry-sdk>=2.61.0",
    "posthog>=7.16.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
fidp = [
    "diffusers>=0.32.0",
    "accelerate>=1.0.0",
    "transformers>=4.44.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]
gpu = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
# Docker CPU images: pins torch to pytorch-cpu index (conflicts with gpu extra).
docker-cpu = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]

[tool.uv]
# Fork lock: gpu extra → CUDA torch; docker-cpu extra → CPU torch (Docker image).
conflicts = [
    [{ extra = "gpu" }, { extra = "docker-cpu" }],
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", extra = "gpu" },
    { index = "pytorch-cpu", extra = "docker-cpu" },
]
torchvision = [
    { index = "pytorch-cu124", extra = "gpu" },
    { index = "pytorch-cpu", extra = "docker-cpu" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
